# learn-lang-rust

./: .gitignore  README.md
level-00-前置学习/: Cargo.toml  README.md  hello.txt
level-00-前置学习/src/: main.rs
level-01-编译模型与Cargo/: Cargo.toml  README.md
level-01-编译模型与Cargo/bugs/: bug_01_模块可见性错误.rs  bug_02_未声明模块引用.rs  bug_03_pub修饰符遗漏.rs
level-01-编译模型与Cargo/src/: main.rs  math_utils.rs  string_tools.rs
level-02-所有权与移动语义/: Cargo.toml  README.md
level-02-所有权与移动语义/bugs/: bug_01_所有权转移后使用.rs  bug_02_容器Move后使用.rs  bug_03_部分移动后访问结构体.rs
level-02-所有权与移动语义/src/: main.rs
level-03-借用与引用/: Cargo.toml  README.md
level-03-借用与引用/bugs/: bug_01_可变与不可变引用冲突.rs  bug_02_两个可变引用.rs  bug_03_悬垂引用.rs
level-03-借用与引用/src/: main.rs
level-04-字符串与集合基础/: Cargo.toml  README.md
level-04-字符串与集合基础/bugs/: bug_01_索引字符串.rs  bug_02_错误的字符串切片边界.rs  bug_03_字符串字面量类型混淆.rs
level-04-字符串与集合基础/src/: main.rs
level-05-结构体枚举模式匹配/: Cargo.toml  README.md
level-05-结构体枚举模式匹配/bugs/: bug_01_非穷尽匹配.rs  bug_02_模式匹配中的所有权转移.rs  bug_03_结构体部分移动后使用.rs
level-05-结构体枚举模式匹配/src/: main.rs
level-06-错误处理/: Cargo.toml  README.md
level-06-错误处理/bugs/: bug_01_unwrap滥用导致panic.rs  bug_02_问号运算符类型不匹配.rs  bug_03_main函数中问号运算符.rs
level-07-Trait与泛型/: Cargo.toml  README.md
level-08-生命周期标注/: Cargo.toml  README.md
level-09-迭代器与闭包/: Cargo.toml  README.md
level-10-智能指针与内部可变性/: Cargo.toml  README.md
level-11-并发与线程安全/: Cargo.toml  README.md
level-12-毕业设计-CLI文件搜索器/: Cargo.toml  README.md
level-12-毕业设计-CLI文件搜索器/src/: error.rs  lib.rs  main.rs
level-12-毕业设计-CLI文件搜索器/src/searcher/: filter.rs  mod.rs  walker.rs
(+34 files in other folders)
